cmake_minimum_required(VERSION 3.13)
#if (TARGET tinyusb_device)

    include(pico_sdk_import.cmake)
    project(USB_LOG C CXX ASM)
    pico_sdk_init()
    add_executable(app_main app_main.c)
    pico_add_extra_outputs(app_main)
    target_link_libraries(app_main pico_stdlib)
    pico_enable_stdio_usb(app_main 1)
    pico_enable_stdio_uart(app_main 0)
#elseif(PICO_ON_DEVICE)
#    message(WARNING "not building hello_usb because TinyUSB submodule is not initialized in the SDK")
#endif()